style(antd): fix iconify icon alignment in buttons

--- a/packages/styles/src/antd/index.css
+++ b/packages/styles/src/antd/index.css
@@ -76,3 +76,25 @@
 .ant-app .form-valid-error .ant-picker-focused {
   box-shadow: 0 0 0 2px rgb(255 38 5 / 6%);
 }
+
+/** 修复 按钮中 iconify 位置问题 **/
+.ant-btn > .iconify + span,
+.ant-btn > span + .iconify {
+  margin-inline-start: 8px;
+}
+
+.ant-btn > .iconify {
+  display: inline-flex;
+  align-items: center;
+  width: 1em;
+  height: 1em;
+  font-style: normal;
+  line-height: 0;
+  vertical-align: -0.125em;
+  color: inherit;
+  text-align: center;
+  text-transform: none;
+  text-rendering: optimizelegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
